test/tests/diagnostics/syntax_err03/jastadd.err.expected
Problems during JRAG parsing:
Error at tests/diagnostics/syntax_err03/Test.jrag:3:1: unexpected token "package":
package ast;
^^^^^^^
